# legged_control

./: README.md
legged_controllers/: CMakeLists.txt  package.xml
legged_controllers/config/: aliengoZ1.rviz  joy.yaml  rqt_multiplot.xml
legged_controllers/launch/: load_controller.launch  rviz.launch
legged_controllers/src/: LeggedController.cpp  (+1 more)
legged_interface/: CMakeLists.txt  package.xml
legged_interface/include/legged_interface/: LeggedInterface.h  LeggedPreComputation.h
legged_interface/include/legged_interface/common/: ModelSettings.h
legged_interface/include/legged_interface/constraint/: EndEffectorConstraint.h  NormalVelocityConstraintCppAd.h
legged_interface/include/legged_interface/cost/: LeggedRobotQuadraticTrackingCost.h
legged_interface/include/legged_interface/dynamics/: LeggedDynamicsAD.h
legged_interface/include/legged_interface/initialization/: LeggedInitializer.h
legged_interface/include/legged_interface/visualization/: legged_visualization.h
legged_interface/src/: LeggedInterface.cpp  LeggedPreComputation.cpp
legged_interface/src/common/: ModelSettings.cpp
legged_interface/src/constraint/: EndEffectorConstraint.cpp  NormalVelocityConstraintCppAd.cpp
legged_interface/src/dynamics/: LeggedDynamicsAD.cpp
legged_interface/src/initialization/: LeggedInitializer.cpp
legged_interface/src/visualization/: legged_visualization.cpp
legged_msgs/: CMakeLists.txt  package.xml
legged_msgs/msg/: arm_joints_debug.msg  joints_acc.msg
legged_wbc/: CMakeLists.txt
z1_controller/: CMakeLists.txt  main.cpp
z1_sdk/: CMakeLists.txt
(+24 files in other folders)
