<?xml version="1.0"?>
<package format="2">
    <name>legged_interface</name>
    <version>0.0.0</version>
    <description>Legged interface base on OCS2</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>urdf</depend>
    <depend>ocs2_ros_interfaces</depend>
    <depend>kdl_parser</depend>
    <depend>robot_state_publisher</depend>
    <depend>ocs2_legged_robot</depend>
    <depend>pinocchio</depend>
    <depend>ocs2_self_collision</depend>

</package>
