<?xml version="1.0"?>
<package format="2">
  <name>legged_msgs</name>
  <version>1.0.0</version>
  <description>The legged message definitions</description>

  <maintainer email="caozhefeng1998@gmail.com">CZF</maintainer>

  <license>BSD3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
